--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1>Salut, sunt Daniel!</h1>
+<!DOCTYPE html>
+<html lang="ro'>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport"
+content="width=device-width, initial-scare=1.0">
+<title>Acasa</title>
+<link rel="stylesheet" href="style.css'>
+</head>
+<body>
+<div class="container">
+<h1 class="titlu">Bine ati venit pe siteul meu!</h1>
+<h2 class="subtitlu">Mai departe o sa gasiti informatii</h2>
+<img src="imagine_site.png" alt="Imaginea principala" class="main-image">
+<nav>
+<a href="index.html">Acasa</a>
+<a href="despre.html">Despre</a>
+<a href="contact.html">Contact</a>
+</nav>
+<p class="text">Aceasta este pagina principala.</p>
+</div>
+<script src="script.js"></script>
+<p>Actualizat</p>.
+</body>
+</html>
